--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap": "5.3",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-alpha.23"
