--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "5.3",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
